--- a/css/mobileNav.css
+++ b/css/mobileNav.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 100vh;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     z-index: 9998;
     background-color: white;
     display: flex;
